Added descriptiveness levels and sockets for web view

--- a/docs/changelog
+++ b/docs/changelog
@@ -1,7 +1,14 @@
-2024/7/11
+2024/7/13
+- Started second iteration of story (lemeny version)
+
+2024/7/12
+- Worked on web view, added flask_socketio
+
+2024/7/11 (7k words - 7k words)
+- Added descriptiveness levels
 
 2024/7/10 (6k words - 7k words)
-- Sam story test
+- Sam old story test
 - Wrote third training expedition
 
 2024/7/9 (6k words - 6k words)
