--- a/docs/changelog
+++ b/docs/changelog
@@ -1,3 +1,7 @@
+2024/7/14
+- Used module pattern for globals game, state, and view rather than previous injection pattern
+- Cleaned up project directories and files
+
 2024/7/13
 - Started second iteration of story (lemeny version)
 
