--- a/docs/changelog
+++ b/docs/changelog
@@ -1,3 +1,18 @@
+2024/10/5
+
+2024/9/1
+- Worked on lemeny version
+
+2024/8/26
+- Worked on lemeny version
+- Worked on, but didn't finish, cost checking with passed args
+- Moved some commands to info
+
+2024/8/19
+- Added ability to define command macros
+- Moved completion command to a subcommand of info
+- Added info command and ability to see all vars defined
+
 2024/7/14
 - Used module pattern for globals game, state, and view rather than previous injection pattern
 - Cleaned up project directories and files
