exec command and story version 3

--- a/docs/changelog
+++ b/docs/changelog
@@ -1,4 +1,14 @@
+2024/10/11
+- Worked on abstract version, added up to third training
+
+2024/10/7
+- Started abstract version
+
+2024/10/6
+- exec commands
+
 2024/10/5
+- Renamed metadata in state to story_data
 
 2024/9/1
 - Worked on lemeny version
