--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -1,5 +1,14 @@
 Currently:
-  - Possible values (just finished parsing, need to check that starting value is possible)
+  - Connection instruction
+  - Block location/locales
+  - Check tag for choices that activates at the same time as require and has custom message for what was missing
+
+  - Game objects
+    - Test for duplicate objects
+
+  - Refresh persistence for web view
+    - Need to save text and print saved text
+  - Restricting possible values? (just finished parsing, need to check that starting value is possible)
 
   - Block moving
     - New way to check for whether address id's work
@@ -20,17 +29,30 @@ Currently:
 Big Todo:
   - UI
 
+194. Block-based visits var
+193. Mapping tool to compile to yaml
+192. Maybe keep track of a primary block/location which doesn't include the headers?
+191. Make headers not affect choice effects? Choices in headers also borked, maybe effects with named blocks should be different, and relative to header not good
+190. Check if _addr makes sure we go to block with _content or is list and is also a block!
+189. Shortcuts for moving around
+188. Printing of relevant variables (such as coin amounts in shops)
+187. Add _content tags at parse time (before story construction) so that all blocks are dicts
+186. dont_save_print implemented for gameloop print statements, like settings
+185. Locations you can name and fast travel to
+184. Have up keys actually input last command
+183. Formatting blocks (with no line breaks)
+182. Remove stupid fstrings
+181. Ability to just press enter to go to next part
+180. Require for booleans
+179. Have inject go into future choices too
 177. Templates with parameters?
 176. Inject into more things, to prevent copying text a lot
 175. More explicit "modify" instruction with more checks than I could do with "set" expressions
-174. "seed" command that forces the next few "random" values to prechosen values (doesn't actually seed generator)
-173. An "all" tag for injecting into choices
 172. Keep track of block permutations with block moving
 171. State settings for config constant changes like max_macro_depth
 170. Ponder custom editor UI (maybe I can move to a more graph-like block structure then)
 169. Think about whether to do inform-like interrupts (could also have interrupts on certain choices, or choices with certain tags, etc.)
 168. Ability to play as multiple people at once
-167. Investigate that headers seem to be running after everything else
 166. Connectivity tester that tests if there are gotos from a block to every other block in the story or at least specified blocks
 165. Test on windows computer
 164. Warnings at parse time for possibly unintended things
@@ -83,7 +105,7 @@ Big Todo:
 115. Tag/filter system... filter only for blocks with a certain tag when doing instructions/commands
 114. Make list of definitive features to test
 113. Ability to organize vars more into "blocks" that are just for organizational purposes
-112. Tags about story elements for debugging? What would these do? Maybe built-in changelogs and messages.
+112. Tags about story elements for debugging? What would these do? Maybe built-in changelogs and messages
 111. Make random number generator deterministic
 109. Attach which game "id" each save is from
 108. Overwrite confirmation for saving over an old file?
@@ -112,12 +134,15 @@ Big Todo:
 75. Should "stops" deconstruct the call stack like they do now? In general, how could we do choices within a gosub?
 74. Write a story that allows the reader to write their own story, just for the meta-ness nerd cred
 70. Plural/gender/etc. localizations
-69. Override variable subscripting, turning variables into special dicts before being passed to eval
 68. World object that exists separately for each block (or even just a macro)
 63. Check that insert commands and such are only used with bags
 58. SPILL instruction for when we do want to "spill" from an effects section to the parent area
 
 DONE
+167. Investigate that headers seem to be running after everything else
+173. An "all" tag for injecting into choices
+174. "seed" command that forces the next few "random" values to prechosen values (doesn't actually seed generator)
+69. Override variable subscripting, turning variables into special dicts before being passed to eval
 159. Test speed of program (the printing is just slow in VSCode unfortunately)
 65. Special addressing for the "root" block of a *file* rather than of the whole story
 97. Separator instruction
@@ -172,6 +197,7 @@ DONE
 1. Checking that story is formatted correctly
 
 NOT DOING
+178. Don't save text from actions (already have a way to specify not to save text now with a certain _meta tag)
 56. Disallow random intervals in choice specs (maybe once I get warnings, then it can just be a warning)
 46. Temp variables that are temporary/only relevant within a block, then they're not set anymore/block variables
 26. Cost checking with passed args (can be done with enforced conditions now)
