Persistence across reloads in web view
Also a few instructions tests

--- a/docs/changelog
+++ b/docs/changelog
@@ -1,4 +1,11 @@
-2025/05/23 (8k words - ?)
+2025/05/25 (8k words - 8k words)
+- Persistence between reloads
+
+2025/05/24 (8k words - 8k words)
+- Made a few tests for instructions
+
+2025/05/23 (8k words - 8k words)
+- Worked on Web view showing variables
 
 2024/11/25 (8k words - 8k words)
 - Wrote more of gpt factory story
