Commit before work on server

--- a/docs/changelog
+++ b/docs/changelog
@@ -1,4 +1,5 @@
 2025/06/03 (3k words - ?)
+- Worked on story (third training expedition)
 
 2025/06/02 (2k words - 3k words)
 - Worked some on story
