Make story progress user-specific (didn't work)

--- a/docs/changelog
+++ b/docs/changelog
@@ -1,5 +1,9 @@
-2025/06/03 (3k words - ?)
+2025/06/04 (4k words - ?)
+- Added "nonzero" hidden setting for variables (only hides them if you have zero of them, but visible otherwise)
+
+2025/06/03 (3k words - 4k words)
 - Worked on story (third training expedition)
+- Got story online!
 
 2025/06/02 (2k words - 3k words)
 - Worked some on story
