Commit before big refactor for user-specific state

--- a/docs/changelog
+++ b/docs/changelog
@@ -1,5 +1,6 @@
 2025/06/04 (4k words - ?)
 - Added "nonzero" hidden setting for variables (only hides them if you have zero of them, but visible otherwise)
+- Made clearer what was missing when something was missing for a choice
 
 2025/06/03 (3k words - 4k words)
 - Worked on story (third training expedition)
